--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="regex_treeview" class="box_overflow_fix">
+		<div id="regex_treeview" class="box_overflow_fix" style="width:60%">
 			<p> here</p>
 		</div> 
 	</div>
