--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</h1>
 				<ul id="header_nav">
 					<li class="fullscreen header_nav active main_menu main" data-id="40">
-						<i class="fa fa-terminal"></i><span class="large_menu">Regex Tester</span>
+						<a  href="#regex_editor"><i class="fa fa-terminal"></i><span class="large_menu">Regex Tester</span></a>
 					</li>
 					<li class="fullscreen header_nav  main_menu main" >
 						<a  href="#run_on_file"><i class="fa fa-file-text"></i><span class="large_menu">test</span></a>
@@ -238,7 +238,7 @@
 	<div id="community" class="box_overflow_fix extension_window"></div>
 	<div id="account" class="box_overflow_fix extension_window"></div>
 
-	<div id="run_on_file" class="box_overflow_fix">
+	<div id="run_on_file" class="box_overflow_fix extension_window">
 		<p> hello in run on file </p>
 	</div>
 	<div id="regex_editor" class="box_overflow_fix">
