--- a/index.html
+++ b/index.html
@@ -239,7 +239,36 @@
 	<div id="account" class="box_overflow_fix extension_window"></div>
 
 	<div id="run_on_file" class="box_overflow_fix extension_window">
+		<!-- <div id="code_samples" class="extension_window box_overflow_fix overflow_handler"></div> -->
 		<p> hello in run on file </p>
+		<!--<div id="regex_debugger" class="box_overflow_fix extension_window">
+			<div id="regex_debugger_bg" class="box_overflow_fix">
+				<div class="label" id="debugger_label">Status: Fetching debug info...</div>
+
+				<div id="label_container" class="monospace">
+					<input type="checkbox" id="show_regex_pos" name="show_regex_pos" tabindex="999" value="1" checked="checked"/>
+					<label class="design_label" for="show_regex_pos">
+						<span></span>Display position in pattern
+					</label>
+
+					<input type="checkbox" id="internal_opt" name="internal_opt" tabindex="999" value="1"/>
+					<label class="design_label" for="internal_opt">
+						<span></span>Disable internal engine optimizations
+					</label>
+
+					<a href="#" id="debugger_collapse">collapse all</a>
+				</div>
+
+			</div>
+			<div id="regex_debugger_window" class="overflow_handler">
+				<div class="debugger_loader_padding"></div>
+			</div>
+		</div> -->
+		
+		<div id="main_editor_2" class="flex-container box_overflow_fix">
+			<p> in main editor</p>
+		</div>
+
 	</div>
 	<div id="regex_editor" class="box_overflow_fix">
 		<div id="code_samples" class="extension_window box_overflow_fix overflow_handler"></div>
