--- a/index.html
+++ b/index.html
@@ -267,6 +267,9 @@
 		
 		<div id="main_editor_2" class="flex-container box_overflow_fix">
 			<p> in main editor</p>
+			<div id="regex_container_2" class="flex-regex box_overflow_fix">
+				<p> in regex_container <p>
+			</div>
 		</div>
 
 	</div>
