--- a/index.html
+++ b/index.html
@@ -269,6 +269,36 @@
 			<p> in main editor</p>
 			<div id="regex_container_2" class="flex-regex box_overflow_fix">
 				<p> in regex_container <p>
+				<label for="regex_2">
+					Regular Expression
+					<div id="version_container_2" style="display: none;">
+						&mdash;
+						<select id="version_selector_2">
+													</select>
+											</div>
+					<span id="result_indicator_2" class="no_match">no match</span>
+				</label>
+				
+				<div id="regex_input_2" class="box_overflow_fix richtext_parent">
+					<div id="delimiter_selector_2" class="richtext_left slash_menu slash box_overflow_fix" data-dropdown=".delimiter-dropdown">/</div>
+					<div class="richtext_right">
+						<div class="slash slash_menu" data-dropdown=".delimiter-dropdown">/</div><!--
+						--><div id="options_container_2">
+							<input data-focus="#options_container_2" value="" id="options_2" name="options" size="20" tabindex="2" type="text" placeholder="gmixXsuUAJ"/>
+							<i id="options_helper_2" class="fa fa-question-circle"></i>
+						</div>
+						<div id="options_helper_contents_2"></div>
+					</div>
+					<div class="richtext_padding">
+						<div class="richtext_container" id="richtext_regex_container_2">
+							<div class="richtext" id="richtext_regex_2">
+								<pre><span class="colorizer_height"></span><br/></pre>
+								<pre id="regex_colors"><span></span><br/></pre>
+								<textarea data-focus="#richtext_regex_container" spellcheck="false" id="regex" name="regex" tabindex="1" rows="1" cols="50" placeholder="insert your regular expression here" autofocus="autofocus"></textarea>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
