--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
 						<div class="richtext_container" id="richtext_regex_container_2">
 							<div class="richtext" id="richtext_regex_2">
 								<pre><span class="colorizer_height"></span><br/></pre>
-								<pre id="regex_colors"><span></span><br/></pre>
-								<textarea data-focus="#richtext_regex_container" spellcheck="false" id="regex" name="regex" tabindex="1" rows="1" cols="50" placeholder="insert your regular expression here" autofocus="autofocus"></textarea>
+								<pre id="regex_colors_2"><span></span><br/></pre>
+								<textarea data-focus="#richtext_regex_container_2" spellcheck="false" id="regex_2" name="regex" tabindex="1" rows="1" cols="50" placeholder="insert your regular expression here" autofocus="autofocus"></textarea>
 							</div>
 						</div>
 					</div>
