--- a/index.html
+++ b/index.html
@@ -299,6 +299,16 @@
 					</div>
 				</div>
 			</div>
+			<div id="test_result_container_2" class="box_overflow_fix flex-text ">
+				<label for="regex_string_2">Test string</label>
+				<div class="overflow_handler flex-grow">
+					<div class="richtext" id="richtext_test_2">
+						<pre><span id="richtext_test_size_2"></span><br>&nbsp;</pre>
+						<pre id="richtext_test_colors_2"><span id="test_color_element_2"></span><br></pre>
+						<textarea wrap="off" data-focus="#test_result_container_2 .overflow_handler" spellcheck="false" id="regex_string_2" class="box_overflow_fix" name="test" rows="10" tabindex="3" placeholder="insert your test string here"></textarea>
+					</div>
+				</div>
+			</div>
 		</div>
 
 	</div>
