--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
 						<div id="options_helper_contents_2"></div>
 					</div>
 					<div class="richtext_padding">
-						<div class="richtext_container" id="richtext_regex_container_2" style="height: 29px;">
+						<div class="richtext_container" id="richtext_regex_container_2">
 							<div class="richtext" id="richtext_regex_2">
-								<!--<pre><span class="colorizer_height"></span><br/></pre>
-								<pre id="regex_colors_2"><span></span><br/></pre> -->
-								<textarea data-focus="#richtext_regex_container_2" spellcheck="false" id="regex_2" name="regex" tabindex="1" rows="1" cols="50" placeholder="insert your regular expression here" autofocus="autofocus"></textarea>
+								<pre><span class="colorizer_height"></span><br/></pre>
+								<pre id="regex_colors_2"><span></span><br/></pre> 
+								<textarea data-focus="#richtext_regex_container_2" spellcheck="false" id="regex_2_3" name="regex" tabindex="1" rows="1" cols="50" placeholder="insert your regular expression here" autofocus="autofocus"></textarea>
 							</div>
 						</div>
 					</div>
