--- a/index.html
+++ b/index.html
@@ -313,7 +313,18 @@
 		<div id="regex_treeview_2" class="box_overflow_fix">
 			<div id="treeview_resizer_2" title="Keep dragging"><div></div></div>	
 			<div id="treeview_content_2" class="box_overflow_fix flex-container">
-				<p>tesr</p>
+				<div id="scroll_match_2" class="box_overflow_fix flex-elem">
+
+					<div id="match_label_2" class="label expander">
+						<span class="fa"></span>Match information
+					</div>
+					<div class="overflow_handler box_overflow_fix flex-grow">
+						<div id="match_info_2">
+							Detailed match information will be displayed here automatically.
+						</div>
+					</div>
+
+				</div>
 			</div>
 		</div>
 
