--- a/index.html
+++ b/index.html
@@ -558,6 +558,9 @@
 	function get_file_list() {
   		//alert('click event occured')
 		console.log("test");
+		$.get("https://raw.github.com/MauliPatel24/Support-for-human-in-the-loop-Machine-learning-with-Regex/tree/master/test_dir",(data) =>
+      {console.log(data); });
+       
 	}
 </script>
 </body>
