--- a/index.html
+++ b/index.html
@@ -567,5 +567,6 @@
 <script>$.getScript( "file_1.txt", function( data, textStatus, jqxhr ) {
   document.write('<h1>Your data</h1><pre>' + data + '</pre>');
 });
+</script>
 </body>
 </html>
