--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
        
 	}
 </script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>-->
 <script>$.getScript( "file_1.txt", function( data, textStatus, jqxhr ) {
   document.write('<h1>Your data</h1><pre>' + data + '</pre>');
 });
