--- a/index.html
+++ b/index.html
@@ -558,15 +558,15 @@
 	function get_file_list() {
   		//alert('click event occured')
 		console.log("test");
-		$.get("https://raw.github.com/MauliPatel24/Support-for-human-in-the-loop-Machine-learning-with-Regex/tree/master/test_dir",(data) =>
+		$.get("test_dir/file_1.txt",(data) =>
       {console.log(data); });
        
 	}
 </script>
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>-->
-<script>$.getScript( "file_1.txt", function( data, textStatus, jqxhr ) {
+<!--<script>$.getScript( "file_1.txt", function( data, textStatus, jqxhr ) {
   document.write('<h1>Your data</h1><pre>' + data + '</pre>');
 });
-</script>
+</script> -->
 </body>
 </html>
