--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
 		});
 	
 	function get_file_list() {
+		debugger;
   		//alert('click event occured')
 		console.log("test");
 		$.get("test_dir/file_1.txt",(data) =>
