--- a/index.html
+++ b/index.html
@@ -562,7 +562,8 @@
 		$.get("test_dir/file_1.txt",(data) =>
       		{console.log(data); 
 		 debugger;
-		var regex = document.getElementById("delimiter_selector_2").innerHTML + document.getElementById("regex_2_3").value+document.getElementById("delimiter_selector_2").innerHTML + document.getElementById("options_2").value;
+		//var regex = document.getElementById("delimiter_selector_2").innerHTML + document.getElementById("regex_2_3").value+document.getElementById("delimiter_selector_2").innerHTML + document.getElementById("options_2").value;
+		var regex = /is/gi;
 		var result = data.match(regex);
 		console.log(result);
 		});
