--- a/index.html
+++ b/index.html
@@ -573,10 +573,10 @@
 			 var res = "<table>";
 			 var i = 0;
 			 for(i = 0; i<result.length; i++){
-			 	res = res + "<tr> <td> " + result[i] + "</td> <td> " + "yes/no" + "</td> </tr>";
+			 	res = res + "<tr> <td> " + result[i] + "</td> <td> " + "<input type='radio' id='Correct' name='" + resuli[i] + "' value='Correct'> <label for='Correct'>Correct</label><br> <input type='radio' id='InCorrect' name='" + resuli[i] + "' value='InCorrect'> <label for='InCorrect'>InCorrect</label><br> + </td> </tr>";
 			 }
 			 res = res + "</table>";
-			 document.getElementById("match_info_2").appendChild(res);
+			 document.getElementById("match_info_2").innerHTML = res;
 		 }
 		});
 		
