--- a/index.html
+++ b/index.html
@@ -322,6 +322,10 @@
 					<div class="overflow_handler box_overflow_fix flex-grow">
 						<div id="match_info_2">
 							Detailed match information will be displayed here automatically.
+							<input type="radio" id="male" name="gender" value="male">
+  <label for="male">Male</label><br>
+  <input type="radio" id="female" name="gender" value="female">
+  <label for="female">Female</label><br>
 						</div>
 					</div>
 
