--- a/index.html
+++ b/index.html
@@ -322,10 +322,7 @@
 					<div class="overflow_handler box_overflow_fix flex-grow">
 						<div id="match_info_2">
 							Detailed match information will be displayed here automatically.
-							<input type="radio" id="male" name="gender" value="male">
-  <!--<label for="male">Male</label><br>-->
-  <input type="radio" id="female" name="gender" value="female">
-  <!-- <label for="female">Female</label><br> -->
+							
 						</div>
 					</div>
 
@@ -461,6 +458,8 @@
 				<div class="overflow_handler box_overflow_fix flex-grow">
 					<div id="treeview" style="height: 100%">
 						An explanation of your regex will be automatically generated as you type.
+						<label for="myfile">Select files:</label>
+  						<input type="file" id="client_file" name="client_file">
 					</div>
 				</div>
 
