--- a/index.html
+++ b/index.html
@@ -457,6 +457,8 @@
 				</div>
 				<div class="overflow_handler box_overflow_fix flex-grow">
 					<div id="treeview" style="height: 100%">
+						<label for="myfile">Select files:</label>
+  						<input type="file" id="client_file" name="client_file">
 						An explanation of your regex will be automatically generated as you type.
 						<label for="myfile">Select files:</label>
   						<input type="file" id="client_file" name="client_file">
