--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 					<div id="treeview" style="height: 100%">
 						<label for="myfile">Select files:</label>
   						<input type="file" id="client_file" name="client_file">
-						An explanation of your regex will be automatically generated as you type. hellllllo
+						An  ttteeesssttt explanation of your regex will be automatically generated as you type. hellllllo
 						<label for="myfile">Select files:</label>
   						<input type="file" id="client_file" name="client_file">
 					</div>
@@ -473,6 +473,8 @@
 				</div>
 				<div class="overflow_handler box_overflow_fix flex-grow">
 					<div id="match_info">
+						<label for="myfile">Select files:</label>
+  						<input type="file" id="client_file" name="client_file">
 						Detailed match information will be displayed here automatically.
 					</div>
 				</div>
