--- a/index.html
+++ b/index.html
@@ -457,11 +457,9 @@
 				</div>
 				<div class="overflow_handler box_overflow_fix flex-grow">
 					<div id="treeview" style="height: 100%">
-						<label for="myfile">Select files:</label>
+						<label for="client_file" style="border: none;">Select files:</label>
   						<input type="file" id="client_file" name="client_file">
-						An  ttteeesssttt explanation of your regex will be automatically generated as you type. hellllllo
-						<label for="myfile">Select files:</label>
-  						<input type="file" id="client_file" name="client_file">
+						
 					</div>
 				</div>
 
@@ -473,8 +471,6 @@
 				</div>
 				<div class="overflow_handler box_overflow_fix flex-grow">
 					<div id="match_info">
-						<label for="myfile">Select files:</label>
-  						<input type="file" id="client_file" name="client_file">
 						Detailed match information will be displayed here automatically.
 					</div>
 				</div>
