--- a/index.html
+++ b/index.html
@@ -545,7 +545,8 @@
 <script src="js/colorParser.regex101.1436803520.js" type="text/javascript"></script>
 <script src="js/explainer.regex101.1436803512.js" type="text/javascript"></script>
 <script src="js/common.regex101.1436803517.js" type="text/javascript"></script>
-<script src="js/matcher.regex101.1436803513.js" type="text/javascript"></script>
+<script src="js/matcher.regex101.1436803513.js" type="text/javascript"></script>debugger_page.js
+<script src="js/debugger_page.js" type="text/javascript"></script>
 <script>
 	$("#header_nav a").click(function(e) { 
 
