--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<a  href="#regex_editor"><i class="fa fa-terminal"></i><span class="large_menu">Regex Tester</span></a>
 					</li>
 					<li class="fullscreen header_nav  main_menu main" >
-						<a  href="#run_on_file"><i class="fa fa-file-text"></i><span class="large_menu">test</span></a>
+						<a  href="#run_on_file"><i class="fa fa-file-text"></i><span class="large_menu">Run on File</span></a>
 					</li>
 					<li class="fullscreen header_nav main_menu community" data-id="43" style="display: none">
 						<i class="fa fa-cloud"></i><span class="large_menu">Regex Library</span>
@@ -576,8 +576,8 @@
 		 {
 			 var res = "<table>";
 			 var i = 0;
-			 for(i = 0; i<result.length; i++){
-			 	res = res + "<tr> <td> " + result[i] + "</td> <td> " + "<input type='radio' id='Correct' name='" + result[i] + "' value='Correct'> <label for='Correct'>Correct</label> <input type='radio' id='InCorrect' name='" + result[i] + "' value='InCorrect'> <label for='InCorrect'>InCorrect</label> </td> </tr> <br>";
+			 for(i = 0; i<result.length && result[i] != ""; i++){
+			 	res = res + "<tr> <td> " + result[i] + "</td> <td> " + "<input type='radio' id='Correct' name='" + result[i] + "' value='Correct'> <label for='Correct'>Correct</label> <input type='radio' id='InCorrect' name='" + result[i] + "' value='InCorrect'> <label for='InCorrect'>InCorrect</label> </td> </tr>";
 			 }
 			 res = res + "</table>";
 			 document.getElementById("match_info_2").innerHTML = res;
