--- a/index.html
+++ b/index.html
@@ -300,8 +300,17 @@
 				</div>
 			</div>
 			<div id="test_result_container_2" class="box_overflow_fix flex-text ">
-				<label for="regex_string_2">Test string</label>
-				<div class="overflow_handler flex-grow">
+				<label for="regex_string_2">Select Files <input type="button" id="clear_all" value="Clear All" <="" label=""></label>
+    
+    <div> <input type="button" id="get_all_files" value="Load All Files"> 
+        <lable id="available_files"> # Files are avalable to process </lable>         </div>
+    <div> <lable id="lable_select_files"> Select # of Files </lable> 
+            <input type="number" id="Select_files" name="Select_files">
+            <input type="button" id="process_selected_files" value="Process Files"> 
+    </div>
+				<div class="overflow_handler flex-grow" style="
+    display: none;
+">
 					<!--<div class="richtext" id="richtext_test_2">
 						<pre><span id="richtext_test_size_2"></span><br>&nbsp;</pre>
 						<pre id="richtext_test_colors_2"><span id="test_color_element_2"></span><br></pre>
