--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
 				</div>
 			</div>
 			<div id="test_result_container_2" class="box_overflow_fix flex-text ">
-				<label for="regex_string_2">Select Files <input type="button" id="clear_all" value="Clear All" <="" label=""></label>
+				<label for="regex_string_2">Select Files </label>
+				<input type="button" id="clear_all" value="Clear All">
     
     <div> <input type="button" id="get_all_files" value="Load All Files"> 
         <lable id="available_files"> # Files are avalable to process </lable>         </div>
