--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
 				<label for="regex_string_2">Select Files <input type="button" id="clear_all" value="Clear All"> </label>
 				
     
-    <div> <input type="button" id="get_all_files" value="Load All Files"> 
+    <div id="server_file_list" > <input type="button" id="get_all_files" value="Load All Files"> 
         <lable id="available_files"> # Files are avalable to process </lable>         </div>
-    <div> <lable id="lable_select_files"> Select # of Files </lable> 
+    <div id="files_selection_area"> <lable id="lable_select_files"> Select # of Files </lable> 
             <input type="number" id="Select_files" name="Select_files">
             <input type="button" id="process_selected_files" value="Process Files"> 
     </div>
