--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
 <script src="js/common.regex101.1436803517.js" type="text/javascript"></script>
 <script src="js/matcher.regex101.1436803513.js" type="text/javascript"></script>
 <script src="js/debugger_page.js" type="text/javascript"></script>
+<script src="js/run_on_file_tab.js" type="text/javascript"></script>
 <script>
 	$("#header_nav a").click(function(e) { 
 
