--- a/index.html
+++ b/index.html
@@ -331,7 +331,9 @@
 					</div>
 					<div class="overflow_handler box_overflow_fix flex-grow">
 						<div id="match_info_2">
-							Detailed match information will be displayed here automatically.
+							<span>Detailed match information will be displayed here automatically. </span>
+							<table id="result_table">
+							</table>
 							
 						</div>
 					</div>
