--- a/index.html
+++ b/index.html
@@ -333,6 +333,10 @@
 						<div id="match_info_2">
 							<span>Detailed match information will be displayed here automatically. </span>
 							<table id="result_table">
+								<tr>
+									<th style="width:20px"></th>
+									<th></th>
+								</tr>
 							</table>
 							
 						</div>
