--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
 					<div id="match_label_2" class="label expander">
 						<span class="fa"></span>Match information
 					</div>
-					<div class="overflow_handler box_overflow_fix flex-grow">
+					<div id="status_bar" style="hidden : true"> Files are under Process</div>
+					<div id="result_area" class="overflow_handler box_overflow_fix ">
 						<div id="match_info_2">
 							<span>Detailed match information will be displayed here automatically. </span>
 							<table id="result_table">
