--- a/index.html
+++ b/index.html
@@ -329,7 +329,10 @@
 					<div id="match_label_2" class="label expander">
 						<span class="fa"></span>Match information
 					</div>
-					<div id="status_bar" style="hidden : true"> <i class="fa fa-spin"> </i>Files are under Process</div>
+					<div id="status_bar">
+						<i class="fa fa-spinner fa-spin"></i>
+						<span style="padding-left: 5px;">Files are under Process</span>
+					</div>
 					<div id="result_area" class="overflow_handler box_overflow_fix ">
 						<div id="match_info_2">
 							<span>Detailed match information will be displayed here automatically. </span>
