--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
 							<label for="client_dir" style="border: none;">Select Directory</label>
 							<input name="client_dir" id="client_dir" type="file" webkitdirectory multiple>
 						</div>
+						<div> <hr> </div>
 						<div id="display_selected_file_list">
 							
 						</div>
