--- a/index.html
+++ b/index.html
@@ -485,7 +485,9 @@
 						</div>
 						<div> <hr> </div>
 						<div id="display_selected_file_list">
+							<ul id="selected_file_list"> 
 							
+							</ul>
 						</div>
 						
 					</div>
