--- a/index.html
+++ b/index.html
@@ -327,7 +327,9 @@
 				<div id="scroll_match_2" class="box_overflow_fix flex-elem">
 
 					<div id="match_label_2" class="label expander">
-						<span class="fa"></span>Match information
+						<span class="">word padding size
+							<input type="number" id="padding_size" min="0" value="50" onkeypress="return (event.charCode == 8 || event.charCode == 0 || event.charCode == 13) ? null : event.charCode >= 48 &amp;&amp; event.charCode <= 57">
+    						</span>Match information
 					</div>
 					<div id="status_bar">
 						<i class="fa fa-spinner fa-spin"></i>
