--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 			<div id="treeview_content_2" class="box_overflow_fix flex-container">
 				<div id="scroll_match_2" class="box_overflow_fix flex-elem">
 
-					<div id="match_label_2" class="label expander">
+					<div id="match_label_2" class="label expander_2">
 						<span class="">Word Padding Size
 							<input type="number" id="padding_size" min="0" value="50" onkeypress="return (event.charCode == 8 || event.charCode == 0 || event.charCode == 13) ? null : event.charCode >= 48 &amp;&amp; event.charCode <= 57">
     						</span>Match information
