--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@
 							<input type="number" id="padding_size" min="0" value="50" onkeypress="return (event.charCode == 8 || event.charCode == 0 || event.charCode == 13) ? null : event.charCode >= 48 &amp;&amp; event.charCode <= 57">
     						</span>-->
 						Match information
+						<button id="hide_p_w" class="hide_show_class">Hide Padding </button>
+						<button id="show_p_w" class="hide_show_class">Show Padding </button>
 					</div>
 					<div id="status_bar">
 						<i class="fa fa-spinner fa-spin"></i>
