--- a/index.html
+++ b/index.html
@@ -340,6 +340,8 @@
 						<span style="padding-left: 5px;">Files are under Process</span>
 					</div>
 					<div id="result_area" class="overflow_handler box_overflow_fix ">
+						<input type="text" id="regex_val">
+						<input type="number" id="padding_val">
 						<div id="match_info_2">
 							<span>Detailed match information will be displayed here automatically. </span>
 							<table id="result_table">
