--- a/index.html
+++ b/index.html
@@ -346,8 +346,14 @@
 							<span>Detailed match information will be displayed here automatically. </span>
 							<table id="result_table">
 								<tr>
-									<th style="width:20px"></th>
-									<th></th>
+									<th style="width:20px">box</th>
+									<th style="width:20px">File Name</th>
+									<th style="width:20px">Pre Word Index</th>
+									<th style="width:20px">Pre Word</th>
+									<th style="width:20px">Post Word Index</th>
+									<th style="width:20px">Post Word</th>
+									<th style="width:20px">Match Index</th>
+									<th>Match</th>
 								</tr>
 							</table>
 							
